* `mongoc_server_description_ismaster` is removed. Use the equivalent `mongoc_server_description_hello` instead.
* `MONGOC_QUERY_SLAVE_OK` is removed. Use the equivalent `MONGOC_QUERY_SECONDARY_OK` instead.
* `MONGOC_URI_SLAVEOK` is removed. It was unused.
* `mongoc_collection_save` is removed. Use `mongoc_collection_insert_one` or `mongoc_collection_replace_one` instead.

### Forwarding headers (`#include <bson.h>` and `#include <mongoc.h>`)

The compatibility "forwarding" headers have been removed (previously added in 1.13.0). This means it is no longer valid to include the literal header names `mongoc.h` or `bson.h` directly:

```c
#include <bson.h> // No longer provided!
#include <mongoc.h> // No longer provided!
```

Instead, the names must be prefixed with the parent directory: `mongoc/mongoc.h` and `bson/bson.h`:

```c
#include <bson/bson.h>
#include <mongoc/mongoc.h>
```


libmongoc 1.30.2
================

Fixes:

  * Fix C23 build on Windows.

Thanks to everyone who contributed to the development of this release.

  * Jeroen Ooms

libmongoc 1.30.1
================

No changes since 1.30.0. Version incremented to match the libbson version.

libmongoc 1.30.0
================

Fixes:

  * Additional APM events required by the SDAM specification will now be delivered:
    * Servers that have seen `server_opening` will now see a `server_closed` prior to `topology_closed`.
    * Before `topology_closed`, a `topology_changed` event will transition to `Unknown` topology type.
  * Fix reporting insert IDs in `mongoc_bulkwrite_t` when verbose results requested.

Improvements:

  * Improve performance of `mongoc_server_description_new_copy`.

New Features:

  * Add support for structured logging.
    * See `mongoc_client_set_structured_log_opts` and `mongoc_client_pool_set_structured_log_opts`.
  * Add option to configure cache lifetime of In-Use Encryption data encryption keys.